2011-02-05  David Bateman  <dbateman@free.fr>

	* plot/legend.m: Add padding to legend positions. Fix for outerposition
	for southeastoutside and southwestoutside.

2011-02-06  Ben Abbott  <bpabbott@mac.com>

	* plot/legend.m: Align legends to plot box, add demo. Bug 32373.
	* plot/legend.m: "legend off" should delete the legend object.

2011-02-06  David Bateman  <dbateman@free.fr>
	* plot/legend.m : Delete old legend before probing the position and
	outerposition. Reshape lpos correct if the legend locqtion is
	"southeast".

2011-02-06  Ben Abbott  <bpabbott@mac.com>

	* plot/legend.m: Add demo for replacing existing legend.

2011-02-06  John W. Eaton  <jwe@octave.org>

	* general/circshift.m: New tests.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/version.m, path/matlabroot.m: Correct spelling.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* help/help.m, linear-algebra/onenormest.m, plot/graphics_toolkit.m,
	plot/pie3.m, plot/view.m, signal/periodogram.m: Grammarcheck docstrings.

2011-02-05  Ben Abbott  <bpabbott@mac.com>

	* plot/legend.m: Add demo for inline keys created by two plot commands.

2011-02-05  David Bateman  <dbateman@free.fr>

	Bug #32022 and #32343.

	* plot/legend.m (updatelegend): Don't flip plots when resetting the
	legend. Use unwind_protect to ensure that the resursive flag is reset
	in case of an error.
	(getlegenddata): Remove this function and replace its use with the
	function __getlegenddata__.
	* plot/privata/__getlegenddata__.m: New function
	* plot/module.mk (plot_PRIVATE_FCN_FILES): Add it here.
	* plot/private/__plt__.m: Set initial values of hlgnd and tlgnd
	if a legend exists already.

2010-02-02  Rik  <octave@nomad.inbox5.com>

	* sparse/svds.m: Use testif to only run some sparse tests when
	necessary libraries are installed.

2011-02-01  Ben Abbott  <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Don't throw an error if gnuplot
	isn't installed.

2011-02-01  John W. Eaton  <jwe@octave.org>
